--- a/Training01/res/layout/activity_new_task.xml
+++ b/Training01/res/layout/activity_new_task.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".NovaAtividade" >
+    tools:context=".NewTask" >
 
     <TextView
         android:id="@+id/text_view_date"
